vbnc/vbnc/vbnc/tests/Errors/30337-3.vb
Module bug
    Sub Main()
        For i As String = 1 To 2

        Next
    End Sub
End Module